# gstreamer-app-boilerplate

./: CMakeLists.txt  README.md  consumer.cpp  consumer.h  main.cpp  producer.cpp  producer.h
